Fix h1 line spacing

--- a/themes/ruuda/static/css/page_light.css
+++ b/themes/ruuda/static/css/page_light.css
@@ -75,7 +75,7 @@ h1
    * aligns with the grid. */
   color: #000;
   font-size: 2.4em;
-  line-height: 2.8rem;
+  line-height: 2.6rem;
   margin-bottom: 0.7rem;
   padding-top: 2.8rem;
   text-transform: capitalize;
